# dLux

./: .gitignore  .pre-commit-config.yaml  404.html  :w  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  aperture-bug-search.py  assets  equinox_testing.py  fresnel_tests.py  hours.txt  index.html  mkdocs.yml  notes.md  objects.inv  populate_docs.ipynb  pyproject.toml  recompile.sh  requirements.txt  safe_mkdocs.yml  search.json  setup.py  sitemap.xml  versions.json
.github/: automated_tests.yml
.github/workflows/: automated_tests.yml  documentation.yml  draft-pdf.yml  release.yml  tests.yml
0.14.3/CONTRIBUTING/: index.html
0.14.3/generate_umls/: index.html
0.15.0/asm/: index.html
0.15.0/faq/: index.html
0.15.0/sources/: index.html
0.15.1/: 404.html  index.html  search.json  sitemap.xml
0.15.1/abcd_fresnel/: index.html
0.15.1/apertures/: index.html
0.15.1/asm/: index.html
0.15.1/calibration/: index.html
0.15.1/changelog/: index.html
0.15.1/faq/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
Notebooks/: minimal.ipynb
abcd_fresnel/: index.html
apertures/: index.html
asm/: index.html
base/: index.html
calibration/: index.html
changelog/: index.html
contributing/: index.html
coronagraphs/: index.html
dLux/: .__init__.py.swp  .apertures.py.swp  .base.py.swp  .layers.py.swp  .spider_tests.py.swp  .spiders.py.swp  __init__.py  aberrations.py  apertures.py  base.py  basis.py  core.py  detector_layers.py  detectors.py  exceptions.py  fresnel.py  images.py  instruments.py  layers.py  observations.py  optical_layers.py  optical_systems.py  optics.py  propagators.py  psfs.py  sources.py  spectra.py  spectrums.py  spider_tests.py  spiders.py  transformations.py  unified_layers.py  wavefronts.py
dLux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dev/: 404.html  dynamic_optics.py  index.html  objects.inv  search.json  sitemap.xml
docs/: abcd_fresnel.md  apertures.md  asm.md  calibration.md  changelog.md  contributing.md  coronagraphs.md  creating_a_layer.md  faq.md  fresnel.txt  generate_api_mds.py  generate_mds.py  generate_umls.py  index.md  installation.md  mask_design.md  optic_architecture_migration.md  optical_system.md  optical_systems.md  phase_retrieval.md  populate_docs.ipynb  sources.md  sparse_propagation.md  testing.ipynb  usage.md  wavefronts.html
faq/: index.html
functions/: index.html
generate_mds/: index.html
generate_umls/: index.html
installation/: index.html
joss/: joss_figure.py  paper.bib  paper.md
latest/: 404.html  index.html  search.json  sitemap.xml
mask_design/: index.html
notebooks/: FIM_opt.ipynb  GE_optimisation.ipynb  Instrumental_calibration.ipynb  Phase_retrieval.ipynb  Posterior_analysis.ipynb  basic_usage.ipynb  basis_creation_minimal.ipynb  complex_model.ipynb  model_layers.py  multi_param_example.ipynb  plotting.py  single_param_example.ipynb  soft_edged_aperture.ipynb  test_mask.npy
opsys/: index.html
optical_system/: index.html
optical_systems/: index.html
phase_retrieval/: index.html
populate_docs/: index.html
scripts/: generate_umls.py
search/: search_index.json
setup/: index.html
sources/: index.html
sparse_propagation/: index.html
src/: .base.py.swp  .layers.py.swp  .propagators.py.swp  __init__.py  base.py  detector_layers.py  fresnel.py  generic_layers.py  jaxinterp2d.py  layers.py  layers_template.py  optics_layers.py  plotting.py  propagation_layers.py  propagators.py  telescopes.py  wavefronts.py  zernike.py
tests/: .apertures.py.swp  apertures.py  base.py  conftest.py  core.py  detectors.py  fresnel_tests.py  integration.py  layers.py  optics.py  propagators.py  safe_propagators.py  sources.py  spectrums.py  spiders.py  test_aberrations.py  test_affine.py  test_apertures.py  test_basis.py  test_coord_specs.py  test_coordinates.py  test_core.py  test_detector_layers.py  test_detectors.py  test_exports.py  test_fixtures.py  test_fresnel.py  test_images.py  test_installation.py  test_instruments.py  test_observations.py  test_optical_layers.py  test_optical_systems.py  test_optics.py  test_polarisation.py  test_polynomials.py  test_propagators.py  test_psfs.py  test_sources.py  test_spectra.py  (+10 more)
(+1008 files in other folders)
