[project]
name = "dLux"
version = "0.13.2"
description = "Differentiable Optical Models as Parameterised Neural Networks in Jax using Zodiax."
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Louis Desdoigts", email = "louis.desdoigts@sydney.edu.au"},
]
keywords = ["python", "optics", "machine-learning", "jax", "autodiff", "differentiable", "diffraction", "simulation", "telescope", "dLux"]
urls = {repository = "https://github.com/LouisDesdoigts/dLux"}
dependencies = ["jax", "jaxlib", "zodiax>=0.4.1"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
extras = ["matplotlib", "jupyter", "jupyterlab", "tqdm", "chainconsumer", "numpyro", "dLuxToliman", "scikit-learn"]
dev = ["pytest", "black", "ruff", "pre-commit", "mkdocs", "mkdocs-jupyter", "mkdocs-same-dir", "mkdocs-autorefs", "mkdocs-simple-plugin", "mkdocstrings-python", "jupyter_contrib_nbextensions"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2