[project]
name = "dLux"
version = "0.15.0"
description = "Differentiable Optical Models as Parameterised Neural Networks in Jax using Zodiax."
readme = "README.md"
requires-python =">=3.10"
license = {file = "LICENSE.md"}
authors = [{name = "Louis Desdoigts", email = "louis.desdoigts@gmail.com"}]
keywords = [
    "python", 
    "jax", 
    "autodiff", 
    "optics", 
    "differentiable", 
    "diffraction", 
    "simulation", 
    "telescope", 
    "dLux"
]
dependencies = ["zodiax>=0.5", "interpax"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "pre-commit",
    "zensical",           # The new documentation engine
    "mkdocstrings-python" # Required for API generation
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle, F = Pyflakes, I = Isort (replaces your separate isort config)
select = ["E", "F", "I"]
ignore = [
    "E402", # Allow imports not at the top of the file
    "E731", # Allow lambda assignments
    "E741", # Allow ambiguous variable names (l, O, I)
    "F722", # Allow syntax errors in forward type annotations
    "I001", # Allow isort to manage imports without interference
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.black]
line-length = 88