[project]
name = "dLux"
version = "0.15.2"
description = "Differentiable Physical Optics Propagation in Jax"
readme = "README.md"
requires-python =">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
authors = [{name = "Louis Desdoigts", email = "louis.desdoigts@gmail.com"}]
keywords = [
    "python", 
    "jax", 
    "autodiff", 
    "optics", 
    "differentiable", 
    "diffraction", 
    "simulation", 
    "telescope", 
    "dLux"
]
dependencies = ["zodiax>=0.5", "abcdLux>=0.0.2", "interpax"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "selenium",           # Used to generate UML diagrams in documentation
    "pylint",             # Provides pyreverse for UML generation
    "pre-commit",
    "zensical",           # The new documentation engine
    "mkdocstrings-python" # Required for API generation
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle, F = Pyflakes, I = Isort (replaces your separate isort config)
select = ["E", "F", "I"]
ignore = [
    "E402", # Allow imports not at the top of the file
    "E731", # Allow lambda assignments
    "E741", # Allow ambiguous variable names (l, O, I)
    "F722", # Allow syntax errors in forward type annotations
    "I001", # Allow isort to manage imports without interference
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.black]
line-length = 88
